--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -44,7 +44,13 @@ In order to make programmatic creation of roles and defining its permissions a b
 
 ## Development
 
-### `tag:beta` Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
+### Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
+
+<Alert title="Beta Feature" type="warning">
+
+  This is a beta feature, and we're looking for feedback from the community. If you encounter any issues, please [let us know](https://www.webiny.com/slack).
+ 
+</Alert>
 
 From the early days, in order to perform both backend and frontend development, Webiny users would use the [`webiny watch`](/docs/core-development-concepts/basics/watch-command) command. And while this command works fine when it comes to frontend development (Admin, public website), we've come to a conclusion that it's not the best solution for backend development. 
 
