feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -46,7 +46,7 @@ In order to make programmatic creation of roles and defining its permissions a b
 
 ### Introducing The New Watch Command (Local AWS Lambda Development) ([#4185](https://github.com/webiny/webiny-js/pull/4185))
 
-<Alert title="Beta Feature" type="warning">
+<Alert title="Beta Feature">
 
   This is a beta feature, and we're looking for feedback from the community. If you encounter any issues, please [let us know](https://www.webiny.com/slack).
  
