feat: create 5.41.0 docs

--- a/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
+++ b/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
@@ -99,6 +99,12 @@ The easiest way to find out which permissions are available and to build roles w
 
 <Image src={copyPermissionsButton} alt="Copy Permissions Button" />
 
+<Alert>
+
+  More info on security permissions can also be found in the [Security Framework - Introduction](/docs/security/security-framework/introduction#permission) article.
+
+</Alert>
+
 ## Teams
 
 In this example, we define a new team that consists of the **Full CMS Access** role that we created in the [Roles](#roles) section.
