feat: create 5.41.0 docs

--- a/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
+++ b/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
@@ -82,7 +82,7 @@ As we can see, first we define a new team via the `createSecurityRolePlugin` plu
 - `id` - a unique identifier of the role
 - `name` - the name of the role
 - `description` - a short description of the role
-- `permissions` - an array of [security permissions](#security-permissions) that the role provides
+- `permissions` - an array of [security permissions](#defining-security-permissions) that the role provides
 
 
 With this code in place, we should be able to see the following role in the Roles module:
